@startuml
skinparam groupInheritance 1
top to bottom direction

package org.anttijuustila.drawingdemo {

	class DrawingApp {
		+ {static} main(args : [String]) : void
	}

	DrawingApp *--> controller.DrawingDocument : document
	DrawingApp ..> view.ListPanel : creates
	DrawingApp ..> view.DrawingPanel : creates
	DrawingApp ..> view.StatusPanel : creates

	package controller {
		class DrawingDocument <<subject>>  {
			- currentlySelectedIndex : int 
			+ addObserver(observer: DocumentObserver)
			+ removeObserver(observer: DocumentObserver)
			+ handleMouseDown(point : Point)
			+ handleMouseMove(point : Point) 
			+ handleMouseUp(point : Point)
			+ createShape() : DrawingShape
			+ getShapes() : List<DrawingShape>
			+ setSelectedShape(whichShape : int)
			+ removeShape(selectedIndex: int)
		}
		interface DocumentObserver {
			+ documentChanged()
			+ selectionChanged(selection : int)
		}
		DrawingDocument *--> "*" DocumentObserver : observers
		DrawingDocument *--> "*" org.anttijuustila.drawingdemo.model.DrawingShape : shapes
	}

	package model {
		class DrawingShape
	}

	package view {
		class ListPanel {
			- elementList : javax.swing.JList<DrawingShape>
			+ valueChanged(e : ListSelectionEvent)
			+ keyReleased(e : KeyEvent) 
		}
		ListPanel ..> DrawingDocument
		class DrawingPanel  <<observer>> {
			+ paintComponent(g : Graphics)
			+ mousePressed(e : MouseEvent)
			+ mouseReleased(e : MouseEvent)
			+ mouseDragged(e : MouseEvent)
		}
		DrawingPanel ..|> DocumentObserver
		DrawingPanel ..> DrawingDocument
		class DrawingElementListModel <<observer>>
		ListPanel *--> DrawingElementListModel : has
		DrawingElementListModel ..> org.anttijuustila.drawingdemo.controller.DrawingDocument
		DrawingElementListModel ..|> DocumentObserver
		class StatusPanel <<observer>> {
			- statusLabel: JLabel
		}
		StatusPanel ..|> DocumentObserver
		StatusPanel ..> DrawingDocument
	}

}
@enduml